few feature added and changed UI
